# pet_project_performance_threads

./: .directory
cpp/cpp_gui/: .gitignore  CMakeLists.txt
cpp/cpp_gui/header/: CalculatorIntegrals.hpp  mainwindow.h  mdef
cpp/cpp_gui/src/: CalculatorIntegrals.cpp  Function.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
cpp/cpp_terminal/: .gitignore  CMakeLists.txt
cpp/cpp_terminal/header/: CalculatorIntegrals.hpp  Function.hpp  mdef
cpp/cpp_terminal/src/: CalculatorIntegrals.cpp  main.cpp
java/: .directory
java/java_gui/: .directory  pom.xml
java/java_gui/src/main/java/: module-info.java
java/java_gui/src/main/java/com/example/lab_10/: Function.java  Lab10.java  Main.java  ProgramController.java
java/java_gui/src/main/resources/com/example/lab_10/: gui.fxml
java/java_gui/src/main/test/com/example/lab_10/: Lab10Test.java
